2004-08-11  Per Bothner  <per@bothner.com>

	* XQParser.java (DOT_VARNAME, POSITION_VARNAME, LAST_VARNAME):
	Change to uninterned Symbols.
	* XQResolveNames.java (push):  Warn about shadowing declarations.

2004-08-08  Per Bothner  <per@bothner.com>

	* XQuery.java (applyWithFocus, applyWithFocus$X, eval_with_focus$X):
	Use new check3 method.

2004-07-20  Per Bothner  <per@bothner.com>

	* XQParser.java:  Remove unused import statements.

2004-06-12  Per Bothner  <per@bothner.com>

	* XQParser.java (nesting, pushNesting, popNesting):  Moved to Lexer.

2004-05-29  Per Bothner  <per@bothner.com>

	* XQParser.java (getDelimited):  Reset tokenBufferLength.

	* XQParser.java (parseXMLConstructor):  Unread before PI content.

2004-05-28  Per Bothner  <per@bothner.com>

	* XQParser.java (parseContent):  Changes to fix space handling.
	* XQParser.java (parseXMLConstructor):  Use MakeCData for CDATA.
	Handle direct processing instruction constructor.

	* XQParser.java (parseMaybePrimaryExpr):  Update for TextConstructor
	being renamed to MakeText.

2004-05-08  Per Bothner  <per@bothner.com>

	* XQParser.java (OP_COMMENT, OP_PI, OP_DOCUMENT):  New token codes.
	(peekOperand):  Recognize these new token kinds.
	(getDelimited):  New method.
	(parseItemType):  Recognize comment and processing-instruction.
	(parseXMLConstructor):  New method.
	(parseContent, parseMaybePrimaryExpr):  Use parseXMLConstructor.
	(matchConstructorKeyword):  Recognize 'comment {'.
	(parseMaybePrimaryExpr):  Use CommentConstructor for 'comment {'.
	(commentNodeTest, piNodeTest):  New static NodeType fields.

2004-05-08  Per Bothner  <per@bothner.com>

	* XQuery.java (mangle):  Two new static methods - currently unused.

2004-03-09  Per Bothner  <per@bothner.com>

	* XQParser.java (parseItemTime):  Handle 'document-node()'.
	(documentNodeTest):  New constant.

	* XQParser.java (peekOperator):  Handle 'instance' like 'instanceof'.
	(parseBinaryExp):  Recognize 'instance' followed by 'of'.